--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,8 +12,7 @@ phases:
   pre_build:
     commands:
       - echo "Pull down flyway tool"
-      - wget https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/7.8.1/flyway-commandline-7.8.1-linux-x64.tar.gz -O flyway.tar.gz tar xvz && sudo ln -s `pwd`/flyway-7.8.1/flyway /usr/local/bin
-
+      - wget -qO- https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/7.8.1/flyway-commandline-7.8.1-linux-x64.tar.gz | tar xvz && sudo ln -s `pwd`/flyway-7.8.1/flyway /usr/local/bin
 
   build:
     commands:
