--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - echo "Pull down flyway tool"
-      - wget -qO- https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/7.8.1/flyway-commandline-7.8.1-linux-x64.tar.gz | tar xvz && sudo ln -s `pwd`/flyway-7.8.1/flyway /usr/local/bin
+      - wget -qO- https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/7.8.1/flyway-commandline-7.8.1-linux-x64.tar.gz | tar xvz
 
   build:
     commands:
@@ -21,5 +21,5 @@ phases:
   post_build:
     commands:
       - echo "CURRENT MIGRATION STATUS"
-      - flyway -configFiles="sql/flyway_configurations/TEST_DB.conf" info  -user=$db_user -password=$db_pwd
+      - ./flyway-7.8.1/flyway -configFiles="sql/flyway_configurations/TEST_DB.conf" info  -user=$db_user -password=$db_pwd
 
