--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -22,4 +22,7 @@ phases:
     commands:
       - echo "CURRENT MIGRATION STATUS"
       - ./flyway-7.8.1/flyway -configFiles="sql/flyway_configurations/TEST_DB.conf" info  -user=$db_user -password=$db_pwd
+      - echo "PERFORM SQL MIGRATIONS"
+      - ./flyway-7.8.1/flyway -configFiles="sql/flyway_configurations/TEST_DB.conf" migrate  -user=$db_user -password=$db_pwd
+
 
